Improved voted words register

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -221,6 +221,14 @@ a {
   margin-left: var(--space-sm);
 }
 
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
 .mt-xs {
   margin-top: var(--space-xs);
 }
